# hdb

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  TODO
.github/agents/: core.agent.md
.github/workflows/: ci.yml  release.yml
api/: CMakeLists.txt  README.md
api/include/hdb/api/: context.hpp  session.hpp
api/src/: session.cpp
core/: .clang-format  CMakeLists.txt  LICENSE  LICENSE.ko  README.md
core/include/: hdb.hpp
core/include/hdb/: types.hpp
core/include/hdb/atom/: abstract.hpp  dream.hpp  engram.hpp  imagination.hpp  imagine_params.hpp  impulse.hpp  neuron.hpp  resonance.hpp  synapse.hpp  thought.hpp
core/include/hdb/molecule/: cortex.hpp  hippocampus.hpp  prefrontal.hpp  thalamus.hpp
core/include/hdb/quark/: dream.hpp  neuron.hpp  resonance.hpp  synapse.hpp
core/include/hdb/store/: abstract_table.hpp  dream_table.hpp  iabstract_table.hpp  ineuron_table.hpp  isynapse_table.hpp  neuron_table.hpp  synapse_table.hpp
core/src/molecule/: cortex.cpp  hippocampus.cpp  prefrontal.cpp  thalamus.cpp
python/: CMakeLists.txt  README.md  pyproject.toml
python/bindings/: CMakeLists.txt  module.cpp
python/bindings_api/: CMakeLists.txt  module.cpp
python/bindings_core/: CMakeLists.txt  module.cpp
python/bindings_sqlite/: CMakeLists.txt  module.cpp
python/include/hdb/python/: byte_caster.hpp
python/src/hdb/: __init__.py  _hdb.py  _hdb.pyi  _hdb_api.pyi  _hdb_core.pyi  _hdb_sqlite.pyi
python/src/hdb/atom/: __init__.py
python/src/hdb/molecule/: __init__.py
python/src/hdb/quark/: __init__.py
python/src/hdb/store/: __init__.py
sqlite/: CMakeLists.txt  README.md
sqlite/include/hdb/sqlite/: context.hpp  dream_table.hpp  neuron_table.hpp  open.hpp  setup.hpp  store.hpp  synapse_table.hpp  utils.hpp
sqlite/src/: context.cpp  dream_table.cpp  neuron_table.cpp  open.cpp  setup.cpp  store.cpp  synapse_table.cpp
standard/: CMakeLists.txt  README.md
standard/include/hdb/standard/: session.hpp  sqlite_context.hpp  sqlite_dream_table.hpp  sqlite_neuron_table.hpp  sqlite_synapse_table.hpp  sqlite_utils.hpp
standard/sql/: schema.sql
standard/src/: session.cpp  sqlite_context.cpp  sqlite_dream_table.cpp  sqlite_neuron_table.cpp  sqlite_synapse_table.cpp
store/sqlite/: CMakeLists.txt  README.md
store/sqlite/include/hdb/sqlite/: open.hpp  synapse_table.hpp  utils.hpp
store/sqlite/src/: dream_table.cpp  neuron_table.cpp  synapse_table.cpp
