[build-system]
requires = [
  "scikit-build-core",
  "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "hdb"
version = "0.1.0"
description = "Python bindings for HDB standard runtime"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
  "pybind11",
  "ruff",
  "scikit-build-core",
]

[tool.scikit-build]
cmake.build-type = "Release"
